shortened warp attempt to fix overflow issues on mobile devices

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -69,6 +69,9 @@ main {
 canvas {
   min-height: 100vh;
   min-width: 100vw;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 #overlay {
